Added meta twitter:card for social media preview

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <title>Daniel Dietrich - Résumé - Senior Software Engineer</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The resume of the senior software engineer Daniel Dietrich">
+  <meta name="description" content="The résumé of the senior software engineer Daniel Dietrich">
   <meta name="keywords" content="Resume,Daniel Dietrich,Senior Software Engineer,React,TypeScript,JavaScript,Java,Scala,Functional Programming,Web Development,Web Design">
   <meta name="author" content="Daniel Dietrich">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Daniel Dietrich - Résumé" />
+  <meta name="twitter:description" content="The résumé of the senior software engineer Daniel Dietrich" />
+  <meta name="twitter:site" content="https://resume.danieldietrich.dev" />
+  <meta name="twitter:image" content="https://resume.danieldietrich.dev/header.jpg" />
+  <meta name="twitter:image:alt" content="A header image of Daniel Dietrich" />
   <style>
     html {
       height: 100%;
